Nautilus ignores selected folder for "compress" option
Affected version
- Nightly flatpak: Yes
- nautilus 40.2
I have a few folders I'm trying to compress as separate 7z archives. I'm not waiting for Nautilus to complete each archive, instead I'm choosing "compress" on each one of them. This is causing Nautilus to compress the wrong files, as it auto-selects the newly created archives and ignores my own selection if I'm not quick enough.
Steps to reproduce
- suppose we have folder 1 and folder 2; in Nautilus, select folder 1, choose "compress" and enter a filename for archive 1
- while folder 1 is compressing, select folder 2, choose "compress" and enter a filename for archive 2
- if archiving of folder 1 completes before entering the filename for archive 2, Nautilus compresses archive 1 instead of folder 2.
Expected behavior
Nautilus should use the folder I selected to create the archive.