files-view: Store selected files list for compressing

The selected files list is chosen after the user confirmed the compress
operation in the compress-dialog which may result in files other than
chosen file being compressed.

Store the list of selected files when the user chooses the "Compress"
option from the menu, to avoid that

Fixes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/1900


(cherry picked from commit 6c7eacd20302046521e89dd28240c6b0193ba942)